--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,29 +1,12 @@
 .imageDiv {
   position: relative;
   font-family: philosopher;
+  text-align: center;
 }
 
 .imageDiv img {
   vertical-align: middle;
-}
-
-.buttonOuter {
-  position: absolute;
-  top: 20%;
-  left: 10%;
-  height: 2.5vw;
-  width: 10vw;
-  padding: 0.8%;
-  background-color: white;
-}
-
-.buttonInner {
-  position: relative;
-  height: 70%;
-  padding: 3%;
-  background-color: white;
-  border: 3px solid black;
-  font-size: 1.6vw;
+  text-align: center;
 }
 
 .leaderP {
@@ -50,50 +33,51 @@
 }
 
 .power {
+  display: flex;
+  position: relative;
   font-family: philosopher;
-  height: 27vw;
+  height: 35vw;
 }
 
-.power1 {
+.powerProduct {
   height: 100%;
   width: 40%;
-  display: inline-block;
   background-color: white;
   font-size: 3vw;
+  background-color: #f3f5f9;
 }
 
-.power1 .p1 {
-  position: absolute;
-  margin-top: 1%;
-  margin-left: 2%;
-  opacity: 0.7;
+.powerProduct img {
+  margin: 0;
+  margin-top: 7%;
+  margin-left: 5%;
 }
 
-.power1 .p2 {
-  position: absolute;
-  margin-top: 4%;
-  margin-left: 2%;
+.powerProduct .p1 {
   opacity: 0.7;
+  margin: 0;
+  margin-top: 5%;
+  margin-left: 5%;
+}
+
+.powerProduct .p2 {
+  opacity: 0.7;
+  margin: 0;
+  margin-left: 5%;
 }
 
 .sale {
   height: 100%;
   width: 60%;
-  display: inline-block;
   background-color: red;
   font-size: 4.5vw;
   color: white;
 }
 
 .sale .p1 {
-  position: absolute;
-  margin-top: 3%;
-  margin-left: 5%;
+  margin: 0;
 }
 
 .sale .p2 {
-  position: absolute;
-  margin-top: 7%;
-  margin-left: 5%;
-  font-size: 3vw;
+  margin: 0;
 }
