use inner.window for responsiveness of material ui icons

--- a/src/Components/ProductList/ProductList.scss
+++ b/src/Components/ProductList/ProductList.scss
@@ -73,6 +73,7 @@
 .individualProductFilters li p {
   position: absolute;
   padding: 0;
-  margin-left: 13%;
-  margin-top: -2.4%;
+  margin-left: 12%;
+  margin-top: -1.9%;
+  font-size: 1vw;
 }
