--- a/src/Components/ProductPage/product.scss
+++ b/src/Components/ProductPage/product.scss
@@ -1,4 +1,5 @@
 .productPageContainer {
+  padding: 40px;
 }
 
 .productWrapper {
@@ -29,4 +30,37 @@
   display: flex;
   justify-content: flex-end;
   width: 100%;
+}
+
+.colorWrapper {
+  display: flex;
+  justify-content: space-around;
+  width: 20%;
+  padding: 20px;
+  padding-left: 0px;
+}
+
+.colorOne {
+  width: 30px;
+  height: 30px;
+  background-color: #312154;
+  border-radius: 50%;
+}
+
+.colorTwo {
+  width: 30px;
+  height: 30px;
+  background-color: #b5b2ac;
+  border-radius: 50%;
+}
+
+.productBreadCrumb {
+  font-size: 1.5vw;
+  margin: 20px;
+}
+
+.productDetailWrapper {
+  padding: 40px;
+  border: 2px solid black;
+  height: 200px;
 }
