--- a/src/Components/Hero/Hero.scss
+++ b/src/Components/Hero/Hero.scss
@@ -1,16 +1,31 @@
 .heroContainer {
   width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .HeroBox {
-  display: flex;
   width: 100%;
+  display: flex;
+  flex-wrap: wrap;
   text-align: center;
 }
 
+.heroCard {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+@media only screen and (max-width: 600px) {
+  .heroCard {
+    width: 50%;
+  }
+}
+
 .heroProduct {
-  height: 20vw;
-  text-align: center;
+  width: 100%;
   margin-right: 3%;
   margin-left: 3%;
   margin-top: 2%;
@@ -21,13 +36,4 @@
 
 .heroProduct:hover {
   transform: scale(1.05);
-}
-
-.HeroBox p {
-  text-align: center;
-  width: 70%;
-  height: 10%;
-  display: inline-block;
-  margin: 3%;
-  background-color: #f3f5f9;
 }
