--- a/src/Components/ProductPage/product.scss
+++ b/src/Components/ProductPage/product.scss
@@ -1,11 +1,19 @@
 .productPageContainer {
-  padding: 40px;
+  padding: 10px;
 }
 
 .productWrapper {
-  padding: 40px;
   display: flex;
   justify-content: space-between;
+}
+
+@media only screen and (max-width: 600px) {
+  .productWrapper {
+    flex-direction: column;
+    width: 90%;
+    justify-content: center;
+    text-align: center;
+  }
 }
 
 .productImage {
@@ -15,7 +23,11 @@
   width: 60%;
 }
 
-.productImage img {
+@media only screen and (max-width: 600px) {
+  .productImage {
+    width: 100%;
+    height: 250px;
+  }
 }
 
 .productDetail {
@@ -24,6 +36,15 @@
   background-color: #f3f5f9;
   height: 400px;
   width: 30%;
+}
+
+@media only screen and (max-width: 600px) {
+  .productDetail {
+    width: 100%;
+    font-size: 3vw;
+    padding: 20px;
+    height: auto;
+  }
 }
 
 .heartIcon {
@@ -38,6 +59,13 @@
   width: 20%;
   padding: 20px;
   padding-left: 0px;
+}
+
+@media only screen and (max-width: 600px) {
+  .colorWrapper {
+    justify-content: center;
+    width: 100%;
+  }
 }
 
 .colorOne {
@@ -58,28 +86,67 @@
   font-size: 1.5vw;
 }
 
+@media only screen and (max-width: 600px) {
+  .productBreadCrumb {
+    font-size: 3vw;
+  }
+}
+
 .productDetailWrapper {
   padding: 40px;
   height: 400px;
   display: flex;
+  font-size: 1.5vw;
   justify-content: center;
   border: 2px solid #7e7b73;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+@media only screen and (max-width: 600px) {
+  .productDetailWrapper {
+    padding: 0;
+    width: 100%;
+    font-size: 3vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
 }
 
 .extraDetailOne {
   width: 40%;
   padding-left: 150px;
-  font-size: 1.5vw;
   display: flex;
   text-align: left;
   flex-direction: column;
 }
 
+@media only screen and (max-width: 600px) {
+  .extraDetailOne {
+    padding: 0;
+    width: 100%;
+    padding: 0;
+    text-align: center;
+  }
+}
+
 .extraDetailTwo {
   width: 40%;
   padding-left: 150px;
-  font-size: 1.5vw;
   display: flex;
   text-align: left;
   flex-direction: column;
+}
+
+@media only screen and (max-width: 600px) {
+  .extraDetailTwo {
+    padding: 0;
+    width: 100%;
+    padding: 0;
+    text-align: center;
+  }
 }
