--- a/src/Components/Hero/Hero.scss
+++ b/src/Components/Hero/Hero.scss
@@ -2,8 +2,12 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  margin-top: 40px;
-  margin-bottom: 40px;
+}
+
+@media only screen and (max-width: 600px) {
+  .heroContainer {
+    display: none;
+  }
 }
 
 .HeroBox {
@@ -15,21 +19,15 @@
 
 .heroCard {
   width: 23%;
-  height: 100%;
+  height: 500px;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-@media only screen and (max-width: 600px) {
-  .heroCard {
-    width: 50%;
-    padding: 0;
-  }
-}
-
 .heroProduct {
   width: 100%;
+  height: 80%;
   margin-right: 3%;
   margin-left: 3%;
   margin-top: 2%;
