--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -19,7 +19,7 @@
   .topNav p {
     margin: 0;
     margin-left: 1%;
-    font-size: 5rem;
+    font-size: 4vw;
     float: left;
     cursor: pointer;
     text-decoration: none;
@@ -32,7 +32,7 @@
   .topNav li {
     margin-top: 0.5%;
     float: right;
-    font-size: 3rem;
+    font-size: 2vw;
     padding: 12px;
     cursor: pointer;
     transition: all 0.2s ease-in-out;
@@ -46,15 +46,15 @@
   }
 
   .categoryNav {
-    height: 60px;
+    height: 80px;
     background-color: #f3f5f9;
     overflow: hidden;
   }
 
   .categoryNav li {
     display: inline-block;
-    font-size: 1.7rem;
-    padding: 12px;
+    font-size: 1.8vw;
+    padding: 20px;
     opacity: 0.6;
   }
 
