--- a/src/Components/ProductList/ProductList.scss
+++ b/src/Components/ProductList/ProductList.scss
@@ -44,19 +44,13 @@
 @media only screen and (max-width: 2000px) and (min-width: 1024px) {
   .individualProduct {
     height: 20vw;
-    max-width: 20%;
+    width: 20%;
     margin-right: 3%;
     margin-left: 3%;
     margin-top: 2%;
     margin-bottom: 2%;
     font-size: 1.7vw;
     transition: all 0.1s ease-in-out;
-  }
-
-  @media only screen and (max-width: 600px) {
-    .individualProduct {
-      width: 80%;
-    }
   }
 
   .categoryHeading {
@@ -194,5 +188,11 @@
   .breadCrumb {
     margin-left: 3%;
     font-size: 3vw;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .individualProduct {
+    width: 80%;
   }
 }
