--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -3,6 +3,7 @@
   height: 10%;
   background-color: black;
   margin-bottom: 0;
+  margin-top: 40px;
   color: white;
   font-size: 1.7vw;
   width: 100%;
