--- a/src/Components/ProductList/ProductList.scss
+++ b/src/Components/ProductList/ProductList.scss
@@ -12,6 +12,10 @@
   text-align: center;
 }
 
+.productBox img:hover {
+  opacity: 0.7;
+}
+
 @media only screen and (max-width: 600px) {
   .productBox {
     width: 100%;
@@ -22,8 +26,7 @@
 
 .productBox p {
   width: 70%;
-  height: 10%;
-  margin: 3%;
+  padding: 4px;
   text-align: center;
   display: inline-block;
   background-color: #f3f5f9;
@@ -43,12 +46,9 @@
 
 @media only screen and (max-width: 2000px) and (min-width: 1024px) {
   .individualProduct {
-    height: 20vw;
-    width: 20%;
-    margin-right: 3%;
-    margin-left: 3%;
-    margin-top: 2%;
-    margin-bottom: 2%;
+    width: 30%;
+    height: 300px;
+    padding: 30px;
     font-size: 1.7vw;
     transition: all 0.1s ease-in-out;
   }
@@ -143,13 +143,10 @@
 
 @media screen and (max-width: 1024px) and (min-width: 736px) {
   .individualProduct {
-    height: 40vw;
-    max-width: 40%;
-    margin-right: 3%;
-    margin-left: 3%;
-    margin-top: 2%;
-    margin-bottom: 2%;
-    font-size: 1.7vw;
+    width: 50%;
+    height: 300px;
+    padding: 0;
+    font-size: 2vw;
     transition: all 0.1s ease-in-out;
   }
 
