--- a/src/Components/ProductPage/product.scss
+++ b/src/Components/ProductPage/product.scss
@@ -9,8 +9,7 @@
 }
 
 .productWrapper {
-  padding: 80px;
-  padding-bottom: 0px;
+  padding: 40px;
   display: flex;
   justify-content: center;
 }
@@ -45,7 +44,7 @@
   padding: 40px;
   font-size: 1.5vw;
   background-color: #f3f5f9;
-  height: 400px;
+  height: 80%;
   width: 30%;
 }
 
@@ -106,12 +105,13 @@
 }
 
 .productDetailWrapper {
-  padding: 60px;
-  height: 450px;
+  width: 100%;
   display: flex;
   font-size: 1.5vw;
   justify-content: center;
   border: 2px solid #7e7b73;
+  align-items: center;
+  text-align: center;
 }
 
 @media only screen and (max-width: 600px) {
@@ -128,9 +128,25 @@
   }
 }
 
+.productDetailInner {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+@media only screen and (max-width: 600px) {
+  .productDetailInner {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
 .extraDetailOne {
   width: 40%;
-  padding-left: 150px;
+  height: 100%;
   display: flex;
   text-align: left;
   flex-direction: column;
@@ -143,15 +159,14 @@
 @media only screen and (max-width: 600px) {
   .extraDetailOne {
     padding: 0;
-    width: 100%;
+    width: 60%;
     padding: 0;
-    text-align: center;
   }
 }
 
 .extraDetailTwo {
   width: 40%;
-  padding-left: 150px;
+  height: 100%;
   display: flex;
   text-align: left;
   flex-direction: column;
@@ -163,9 +178,7 @@
 
 @media only screen and (max-width: 600px) {
   .extraDetailTwo {
+    width: 60%;
     padding: 0;
-    width: 100%;
-    padding: 0;
-    text-align: center;
   }
 }
