--- a/src/Components/ProductButton/ProductButton.scss
+++ b/src/Components/ProductButton/ProductButton.scss
@@ -4,6 +4,7 @@
   font-size: 2vw;
   display: flex;
   justify-content: center;
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 600px) {
