--- a/src/Components/BasketListBox/BasketListBox.css
+++ b/src/Components/BasketListBox/BasketListBox.css
@@ -1,5 +1,4 @@
 .basketProductWrapper {
-  border: 2px solid black;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -8,30 +7,86 @@
 }
 
 .individualBasketProduct {
-  border: 2px solid black;
   display: flex;
   width: 90%;
+  border-bottom: 2px solid #f3f5f9;
+}
+
+.productDescElements {
+  width: 90%;
+  margin: 0;
+  display: flex;
 }
 
 .imgBlock {
-  width: 20%;
+  width: 23%;
   height: 100%;
 }
 
 .shortDescBlock {
-  width: 30%;
+  width: 25%;
   padding: 1%;
   padding-left: 3%;
 }
 
 .deliveryBlock {
-  width: 20%;
+  width: 15%;
   padding: 1%;
   padding-left: 3%;
 }
 
 .priceBlock {
-  width: 20%;
+  width: 15%;
   padding: 1%;
   padding-left: 3%;
+}
+
+.actionButton {
+  width: 15%;
+  text-align: center;
+  padding: 1%;
+  padding-left: 3%;
+}
+
+.actionButton p {
+  border: 2px solid black;
+  padding: 2px;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 600px) {
+  .productDescElements {
+    flex-direction: column;
+    align-items: left;
+    font-size: 4vw;
+  }
+
+  .imgBlock {
+    width: 70%;
+  }
+
+  .shortDescBlock {
+    width: 50%;
+    padding: 0;
+    padding-left: 5%;
+  }
+
+  .deliveryBlock {
+    width: 50%;
+    padding: 0;
+    padding-left: 5%;
+  }
+
+  .priceBlock {
+    width: 50%;
+    padding: 0;
+    padding-left: 5%;
+  }
+
+  .actionButton {
+    width: 40%;
+    padding: 0;
+    margin-left: 4%;
+    font-size: 3vw;
+  }
 }
