--- a/src/Components/ShoppingBag/ShoppingBag.scss
+++ b/src/Components/ShoppingBag/ShoppingBag.scss
@@ -1,3 +1,59 @@
 .shoppingBag {
-  height: 50vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  font-size: 2vw;
+}
+
+.basketItemTitles {
+  width: 90%;
+  display: flex;
+  border-bottom: 2px solid grey;
+  opacity: 0.6;
+}
+
+.subTotalBasket {
+  display: flex;
+  justify-content: flex-end;
+  width: 90%;
+}
+
+.shoppingBagHeader {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 20px;
+}
+
+.imgTitle {
+  width: 20%;
+}
+
+.descTitle {
+  width: 20%;
+  margin-bottom: 0%;
+  padding-left: 2.5%;
+}
+
+.availabilityTitle {
+  width: 10%;
+  margin-bottom: 0%;
+  padding-left: 3%;
+}
+
+.unitPriceTitle {
+  width: 10%;
+  margin-bottom: 0%;
+  padding-left: 5%;
+}
+
+@media only screen and (max-width: 600px) {
+  .shoppingBag {
+    font-size: 3.5vw;
+  }
+
+  .basketItemTitles {
+    display: none;
+  }
 }
