add filter function to favourites

--- a/src/Components/ProductPage/product.scss
+++ b/src/Components/ProductPage/product.scss
@@ -64,6 +64,11 @@
   width: 100%;
 }
 
+.heart:hover {
+  transform: scale(1.2);
+  cursor: pointer;
+}
+
 .colorWrapper {
   display: flex;
   justify-content: space-around;
