update text layout for product list ind products

--- a/src/Components/ProductList/ProductList.scss
+++ b/src/Components/ProductList/ProductList.scss
@@ -192,3 +192,11 @@
     width: 80%;
   }
 }
+
+.individualProduct p {
+  margin: 0;
+  background-color: white;
+  font-size: 0.85em;
+  text-align: right;
+  opacity: 0.7;
+}
