--- a/src/Components/Favourites/Favourites.css
+++ b/src/Components/Favourites/Favourites.css
@@ -1,11 +1,13 @@
 .favProductWrap {
   display: flex;
-  border: 2px solid black;
+  flex-wrap: wrap;
+  justify-content: left;
+  padding-left: 3%;
+  padding-right: 3%;
 }
 
 .favProductDetail {
-  width: 30%;
-  border: 2px solid black;
+  width: 29%;
   display: flex;
   padding: 2%;
   flex-direction: column;
@@ -17,6 +19,20 @@
 
 .favProductBottom {
   display: flex;
+  height: 100%;
   flex-direction: column;
-  text-align: right;
+  text-align: left;
+  font-size: 1.7vw;
+}
+
+.favProductBottom p {
+  margin: 5px;
+}
+
+.favouritesContainer h3 {
+  font-size: 2vw;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 20px;
 }
