add filter form to product list and adjust css issues

--- a/src/Components/ProductList/ProductList.css
+++ b/src/Components/ProductList/ProductList.css
@@ -2,8 +2,12 @@
   overflow: hidden;
 }
 
+.productBoxWrapper {
+  display: flex;
+}
+
 .productBox {
-  width: 100%;
+  width: 75%;
   padding: 20px;
   display: flex;
   flex-wrap: wrap;
