--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -41,13 +41,16 @@
   display: flex;
   justify-content: left;
   background-color: #f0f0f0;
+  padding: 5%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
-form {
+.logRegForm {
   display: flex;
   flex-direction: column;
   width: 50%;
-  padding: 5%;
 }
 
 input {
