--- a/src/Components/ProductFilterForm/ProductFilterForm.css
+++ b/src/Components/ProductFilterForm/ProductFilterForm.css
@@ -1,1 +1,44 @@
+.priceRange {
+  margin-bottom: 0;
+}
 
+.rangeFinder {
+  padding: 0;
+  margin: 0;
+}
+
+input[type='checkbox'] {
+  height: 20px;
+  height: 10px;
+  padding: 0;
+  margin: 5px;
+  zoom: 2;
+}
+
+.labelBlock {
+  display: inline-block;
+  font-size: 1.5vw;
+}
+
+.checkBoxBlock {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+  margin-left: 0;
+}
+
+.productFilterForm {
+  font-size: 2vw;
+  padding: 0;
+  margin-left: 20px;
+  width: 20%;
+  border: 3px solid #f3f5f9;
+  height: 600px;
+  box-shadow: black;
+}
+
+.priceValueWrap {
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.5vw;
+}
