--- a/src/Components/ProductFilterForm/ProductFilterForm.css
+++ b/src/Components/ProductFilterForm/ProductFilterForm.css
@@ -42,3 +42,8 @@ input[type='checkbox'] {
   justify-content: space-between;
   font-size: 1.5vw;
 }
+
+.labelBlock > ul {
+  list-style-type: none;
+  padding: 0;
+}
