--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -27,21 +27,10 @@
   margin-top: 33%;
 }
 
-@media only screen and (max-width: 600px) {
-  .saleButton .buttonOuter {
-    margin-left: 55%;
-    margin-top: 33%;
-  }
+@media only screen and (min-width: 640px) and (max-width: 1024px) {
 }
 
-.saleButton .buttonInner {
-  position: absolute;
-  margin-left: 8%;
-  font-size: 1.6vw;
-  border: 0.15vw solid black;
-}
-
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 639px) {
   .saleButton .buttonInner {
     font-size: 3vw;
     margin-left: 2%;
@@ -50,14 +39,21 @@
     opacity: 0.95;
     color: white;
   }
-}
-
-@media only screen and (max-width: 600px) {
   .buttonInner {
     font-size: 3vw;
     width: 60px;
     border: 1px solid black;
     height: 100%;
     padding: 1%;
+  }
+  .saleButton .buttonOuter {
+    margin-left: 55%;
+    margin-top: 33%;
+  }
+  .saleButton .buttonInner {
+    position: absolute;
+    margin-left: 8%;
+    font-size: 1.6vw;
+    border: 0.15vw solid black;
   }
 }
