--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -4,12 +4,6 @@
   justify-content: center;
 }
 
-@media only screen and (max-width: 800px) {
-  .heroContainer {
-    display: none;
-  }
-}
-
 .HeroBox {
   width: 100%;
   display: flex;
@@ -38,4 +32,16 @@
 
 .heroProduct:hover {
   transform: scale(1.05);
+}
+
+@media only screen and (min-width: 640px) and (max-width: 1024px) {
+  .topNav {
+    padding: 5px 15px 5px 15px;
+  }
+}
+
+@media only screen and (max-width: 639px) {
+  .heroContainer {
+    display: none;
+  }
 }
