--- a/src/Components/ProductButton/ProductButton.css
+++ b/src/Components/ProductButton/ProductButton.css
@@ -7,15 +7,27 @@
   cursor: pointer;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 640px) and (max-width: 1024px) {
+  /* .productButton {
+    width: 100%;
+    border: none;
+    padding: 0;
+  }
+  .productButtonInner {
+    width: 30%;
+    font-size: 5vw;
+    border: 2px solid black;
+    padding: 5px;
+  } */
+}
+
+@media only screen and (max-width: 639px) {
   .productButton {
     width: 100%;
     border: none;
     padding: 0;
   }
-}
 
-@media only screen and (max-width: 600px) {
   .productButtonInner {
     width: 30%;
     font-size: 3vw;
