--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,19 +1,16 @@
+.button {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 20%;
+}
+
 .buttonOuter {
-  position: absolute;
-  top: 20%;
-  left: 10%;
-  height: 2.5vw;
-  width: 10vw;
-  padding: 0.8%;
+  width: 40%;
   text-align: center;
   background-color: rgba(255, 255, 255, 0.4);
 }
 
 .buttonInner {
-  position: absolute;
-  padding: 2%;
-  width: 70%;
-  margin-left: 5%;
   background-color: white;
   border: 3px solid black;
   font-size: 1.6vw;
