--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -12,6 +12,7 @@
   background-size: cover;
   display: flex;
 }
+
 .textHeadImage {
   width: 45%;
   margin: 100px;
@@ -93,5 +94,9 @@
   }
 }
 
-@media only screen and (min-width: 640px) and (max-width: 1007px) {
+@media only screen and (max-width: 639px) {
+  .headImageDiv {
+    width: 100%;
+    height: auto;
+  }
 }
