--- a/src/Components/PowerProductHome/PowerProductHome.css
+++ b/src/Components/PowerProductHome/PowerProductHome.css
@@ -13,12 +13,17 @@
 
 .power img {
   width: 100%;
+  height: auto;
 }
 
 .power p:hover {
   text-decoration: underline;
   cursor: pointer;
-  transition-duration: 0.5s;
+  transition-duration: 1s;
+}
+
+.powerMobileText {
+  display: none;
 }
 
 .saleContainer {
@@ -60,4 +65,48 @@ p {
 .saleButtonBlock {
   display: flex;
   justify-content: flex-end;
+}
+
+@media only screen and (min-width: 640px) and (max-width: 1024px) {
+}
+
+@media only screen and (max-width: 639px) {
+  .promoSlotTwoContainer {
+    display: flex;
+    flex-direction: column;
+    font-size: 6vw;
+    background-color: #f3f5f9;
+  }
+
+  .power {
+    width: 100%;
+    margin: 10px;
+  }
+
+  .powerProduct {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+
+  .powerProductText {
+    display: flex;
+    flex-direction: column;
+    margin-right: 20px;
+    margin-left: 10px;
+    justify-content: space-around;
+  }
+
+  .powerMobileText {
+    display: block;
+    font-size: 3vw;
+  }
+
+  .power img {
+    height: 125px;
+    width: auto;
+  }
+
+  .saleContainer {
+    width: 100%;
+  }
 }
