--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -22,6 +22,15 @@
 }
 
 @media only screen and (min-width: 640px) and (max-width: 1024px) {
+  .buttonBlock {
+    margin-top: 10px;
+  }
+
+  .button {
+    font-size: 3vw;
+    width: 150px;
+    padding: 4px;
+  }
 }
 
 @media only screen and (max-width: 639px) {
