--- a/src/Components/HomeDesignerSpotlight/HomeDesignerSpotlight.css
+++ b/src/Components/HomeDesignerSpotlight/HomeDesignerSpotlight.css
@@ -8,15 +8,18 @@
 
 .designerImageandText {
   display: flex;
+  justify-content: center;
   width: 80%;
 }
 
 .designerImageBlock {
+  padding: 60px;
   width: 50%;
-}
-
-.designerImageBlock > img {
-  height: 650px;
+  background-image: url('./designer.png');
+  background-color: #cccccc;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .textOuter {
@@ -25,35 +28,86 @@
 }
 
 .designerTextBlock {
-  height: 650px;
+  height: 500px;
+  padding: 60px;
   display: flex;
   flex-direction: column;
   background-color: white;
   width: 50%;
 }
 
-.designerTextBlock p:first-of-type {
-  margin-left: 90px;
-  margin-top: 40px;
-  width: 60%;
-  font-size: 4vw;
-  font-weight: bold;
+.designerTextBlock h3 {
+  margin-top: 0px;
+  font-size: 2.5vw;
 }
 
 .designerTextBlock p {
-  margin-top: 20px;
-  margin-left: 90px;
-  width: 60%;
+  width: 70%;
   font-size: 2vw;
+  margin-bottom: 15px;
 }
 
 .designerTextBlock > p:hover {
-  text-decoration: underline;
   cursor: pointer;
 }
 
 @media only screen and (min-width: 640px) and (max-width: 1024px) {
+  .designerBlock {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .designerTextBlock {
+    height: auto;
+    padding: 20px;
+  }
+
+  .designerImageBlock {
+    padding: 20px;
+    background-position: center;
+    height: auto;
+  }
+
+  .designerTextBlock h3 {
+    margin: 20px;
+    font-size: 4.5vw;
+  }
+
+  .designerTextBlock p {
+    margin: 15px;
+    font-size: 2.75vw;
+  }
 }
 
 @media only screen and (max-width: 639px) {
+  .designerBlock {
+    padding: 10px;
+  }
+  .designerImageandText {
+    flex-direction: column-reverse;
+    width: 100%;
+  }
+
+  .designerTextBlock {
+    height: auto;
+    padding: 0;
+    width: 100%;
+  }
+  .designerImageBlock {
+    padding: 0;
+    background-position: bottom;
+    width: 100%;
+    height: 250px;
+  }
+
+  .designerTextBlock h3 {
+    margin: 15px;
+    font-size: 6vw;
+  }
+
+  .designerTextBlock p {
+    margin: 15px;
+    width: 75%;
+    font-size: 4vw;
+  }
 }
