--- a/src/Components/HomeHero/HomeHero.css
+++ b/src/Components/HomeHero/HomeHero.css
@@ -23,7 +23,12 @@
 }
 
 @media only screen and (min-width: 640px) and (max-width: 1024px) {
-  .leaderP {
+  .headImageDiv {
+    height: 400px;
+  }
+
+  .textHeadImage {
+    margin: 35px;
   }
 }
 
