--- a/src/Components/PowerProductHome/PowerProductHome.css
+++ b/src/Components/PowerProductHome/PowerProductHome.css
@@ -68,6 +68,13 @@ p {
 }
 
 @media only screen and (min-width: 640px) and (max-width: 1024px) {
+  .power {
+    margin-left: 10px;
+  }
+
+  .power img {
+    width: 95%;
+  }
 }
 
 @media only screen and (max-width: 639px) {
