finished home page layout and updating css mediaqueries

--- a/src/Components/PowerProductHome/PowerProductHome.css
+++ b/src/Components/PowerProductHome/PowerProductHome.css
@@ -75,6 +75,10 @@ p {
   .power img {
     width: 95%;
   }
+
+  .sale .saleText {
+    margin-left: 15px;
+  }
 }
 
 @media only screen and (max-width: 639px) {
