--- a/src/Components/ProductList/ProductList.css
+++ b/src/Components/ProductList/ProductList.css
@@ -1,4 +1,5 @@
 .productListContainer {
+  width: 70%;
   overflow: hidden;
 }
 
@@ -7,7 +8,7 @@
 }
 
 .productBox {
-  width: 75%;
+  width: 70%;
   padding: 20px;
   display: flex;
   flex-wrap: wrap;
@@ -20,35 +21,7 @@
   opacity: 0.7;
 }
 
-@media only screen and (max-width: 600px) {
-  .productBox {
-    width: 100%;
-    flex-direction: column;
-    padding: 0px;
-  }
-}
-
-.productBox p {
-  width: 70%;
-  padding: 4px;
-  text-align: center;
-  display: inline-block;
-  background-color: #f3f5f9;
-}
-
-.individualProduct:hover {
-  transform: scale(1.05);
-}
-
-.breadCrumb .noClickBreadCrumb {
-  color: grey;
-}
-
-.clickToGo:hover {
-  text-decoration: underline;
-}
-
-@media only screen and (max-width: 2000px) and (min-width: 1024px) {
+@media only screen and (min-width: 640px) and (max-width: 1024px) {
   .individualProduct {
     width: 28%;
     padding: 30px;
@@ -105,103 +78,42 @@
   }
 }
 
-@media screen and (max-width: 736px) and (min-width: 0px) {
-  .categoryHeading {
-    text-align: center;
-    font-size: 4vw;
-    margin-bottom: 0;
-    margin-top: 0;
+@media only screen and (max-width: 639px) {
+  .productBox {
+    width: 100%;
+    flex-direction: column;
+    padding: 0px;
   }
 
-  .filterProductsBy {
-    text-align: center;
-  }
-
-  .filterProductsBy ul {
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-    width: 20%;
-    margin-bottom: 2%;
-    font-size: 3vw;
-  }
-  .individualProductFilters li {
-    display: none;
-  }
-
-  .filterText {
-    margin: 0;
-    padding: 0;
-  }
-
-  .filterIcon {
-    margin: 0;
-    padding: 0;
-  }
-
-  .breadCrumb {
-    margin-left: 3%;
-    font-size: 3vw;
-  }
-}
-
-@media screen and (max-width: 1024px) and (min-width: 736px) {
-  .individualProduct {
-    width: 50%;
-    height: 300px;
-    padding: 0;
-    font-size: 2vw;
-    transition: all 0.1s ease-in-out;
-  }
-
-  .filterProductsBy {
-    text-align: center;
-  }
-
-  .filterProductsBy ul {
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-    width: 20%;
-    margin-bottom: 2%;
-    font-size: 3vw;
-  }
-  .individualProductFilters li {
-    display: none;
-  }
-
-  .filterText {
-    margin: 0;
-    padding: 0;
-  }
-
-  .filterIcon {
-    margin: 0;
-    padding: 0;
-  }
-  .categoryHeading {
-    text-align: center;
-    font-size: 4vw;
-    margin-bottom: 0;
-    margin-top: 0;
-  }
-
-  .breadCrumb {
-    margin-left: 3%;
-    font-size: 3vw;
-  }
-}
-
-@media screen and (max-width: 600px) {
   .individualProduct {
     width: 80%;
   }
-}
 
-.individualProduct p {
-  margin: 0;
-  background-color: white;
-  font-size: 0.85em;
-  text-align: right;
-  opacity: 0.7;
+  .individualProduct p {
+    margin: 0;
+    background-color: white;
+    font-size: 0.85em;
+    text-align: right;
+    opacity: 0.7;
+  }
+
+  .productBox p {
+    width: 70%;
+    padding: 4px;
+    text-align: center;
+    display: inline-block;
+    background-color: #f3f5f9;
+  }
+
+  .individualProduct:hover {
+    transform: scale(1.05);
+  }
+
+  .breadCrumb .noClickBreadCrumb {
+    color: grey;
+  }
+
+  .clickToGo:hover {
+    text-decoration: underline;
+  }
 }
