--- a/src/Components/ProductFilterForm/ProductFilterForm.css
+++ b/src/Components/ProductFilterForm/ProductFilterForm.css
@@ -47,3 +47,23 @@ input[type='checkbox'] {
   list-style-type: none;
   padding: 0;
 }
+
+@media only screen and (min-width: 640px) and (max-width: 1024px) {
+  .productFilterForm {
+    width: 25%;
+    font-size: 2.7vw;
+  }
+  .labelBlock {
+    font-size: 2vw;
+  }
+
+  .priceValueWrap {
+    font-size: 2vw;
+  }
+}
+
+@media only screen and (max-width: 639px) {
+  .productFilterForm {
+    display: none;
+  }
+}
