--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -124,4 +124,28 @@
   .lgScreenAcNav {
     display: none;
   }
+
+  .mobileNavWrap {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .mobileNavBox {
+    height: 200px;
+    width: 200px;
+    background-color: #f0f0f0;
+  }
+
+  .mobileNavBox ul {
+    margin: 0;
+    padding: 4px;
+  }
+
+  .categoryEl {
+    list-style: none;
+    font-size: 1rem;
+    height: 20px;
+    padding: 3px;
+    margin: 0;
+  }
 }
